# detectionplugin

./: .gitignore  CMakeLists.txt  IRecognation.h  README.md  RecognationLibraryConfig.cmake.in  RecognationLibrary_global.h  recognationlibrary.cpp  recognationlibrary.h
Test Plugin/: CMakeLists.txt  test.cpp
